<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/global_background">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:padding="1dp">

        <TextView
            android:id="@+id/setting_title"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/tw_settings"
            android:textColor="@android:color/white"
            android:textSize="@dimen/title_size" />

        <it.polimi.ma.group10.trump.view.InfiniteViewPager
            android:id="@+id/card_themes"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="26"
            android:requiresFadingEdge="horizontal"
            android:translationZ="0dp"
            android:background="@drawable/setting_border"
            android:layout_margin="2dp"/>

        <it.polimi.ma.group10.trump.view.InfiniteViewPager
            android:id="@+id/board_themes"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="26"
            android:requiresFadingEdge="horizontal"
            android:translationZ="0dp"
            android:background="@drawable/setting_border"
            android:layout_margin="2dp"/>

        <android.support.v7.widget.LinearLayoutCompat
            android:id="@+id/game_setting"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="40">

            <android.support.v7.widget.LinearLayoutCompat
                android:id="@+id/sound_hint_settings"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="20">
                <android.support.v7.widget.LinearLayoutCompat
                    android:id="@+id/hint_settings"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="vertical"
                    android:background="@drawable/setting_border"
                    android:layout_weight="5"
                    android:layout_margin="2dp">
                    <TextView
                        android:id="@+id/tv_hint"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:text="@string/hints"
                        android:textColor="@android:color/white"
                        android:gravity="center_horizontal|center_vertical"
                        android:textSize="@dimen/hint_text_size"/>
                    <ImageView
                        android:id="@+id/btn_hint"
                        android:layout_height="0dp"
                        android:layout_weight="3"
                        android:layout_width="match_parent"
                        android:src="@drawable/hint_off"
                        android:padding="4dp"/>
                </android.support.v7.widget.LinearLayoutCompat>

                <android.support.v7.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="horizontal"
                    android:background="@drawable/setting_border"
                    android:layout_margin="2dp"
                    android:layout_weight="5">
                    <android.support.v7.widget.LinearLayoutCompat
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_weight="1">
                        <TextView
                            android:id="@+id/tv_soundfx"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="2"
                            android:text="@string/sound_fx"
                            android:textColor="@android:color/white"
                            android:gravity="center"
                            android:textSize="@dimen/sound_text_size"/>
                        <ImageView
                            android:id="@+id/btn_soundfx"
                            android:layout_height="0dp"
                            android:layout_weight="3"
                            android:layout_width="match_parent"
                            android:src="@drawable/sound_on"
                            android:padding="4dp"/>
                    </android.support.v7.widget.LinearLayoutCompat>
                    <android.support.v7.widget.LinearLayoutCompat
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_weight="1">
                        <TextView
                            android:id="@+id/tv_music"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="2"
                            android:text="@string/music"
                            android:textColor="@android:color/white"
                            android:gravity="center"
                            android:textSize="@dimen/music_text_size"/>
                        <ImageView
                            android:id="@+id/btn_bg_music"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="3"
                            android:src="@drawable/sound_on"
                            android:padding="4dp"/>
                    </android.support.v7.widget.LinearLayoutCompat>
                </android.support.v7.widget.LinearLayoutCompat>

            </android.support.v7.widget.LinearLayoutCompat>

            <android.support.v7.widget.LinearLayoutCompat
                android:id="@+id/difficulty_setting"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@drawable/setting_border"
                android:layout_margin="2dp"
                android:layout_weight="15">
                <TextView
                    android:id="@+id/tv_difficulty"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:textSize="@dimen/difficulty_text_size"
                    android:text="@string/difficulty"
                    android:textColor="@android:color/white"
                    android:gravity="center_horizontal|center_vertical"
                    android:maxLines="1"/>
                <ImageView
                    android:id="@+id/btn_difficulty"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="8"
                    android:src="@drawable/diff_easy"
                    android:padding="1dp"/>
            </android.support.v7.widget.LinearLayoutCompat>
        </android.support.v7.widget.LinearLayoutCompat>


    </android.support.v7.widget.LinearLayoutCompat>
</RelativeLayout>
